@@ -437,6 +437,7 @@ int root_allow_ok PROTO ((char *));
 int same_directories PROTO((char *dir1, char *dir2));
 char *Short_Repository PROTO((char *repository));
 char *gca PROTO((char *rev1, char *rev2));
+extern void check_numeric PROTO ((char *, int, char **));
 char *getcaller PROTO((void));
 char *time_stamp PROTO((char *file));
 
