@@ -1,3 +1,9 @@
+Fri Sep  5 09:14:10 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* subr.c, cvs.h (check_numeric): New function.
+	* admin.c (admin): Call it.
+	* sanity.sh (admin): New tests admin-10a and admin-10b test for fix.
+
 Thu Sep  4 15:55:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* sanity.sh (binwrap2): New tests, test for the ability to specify
